# illumination_effect

./: CMakeLists.txt  README.md  README_zh.md
doc/: report.md  report_zh.md
include/: camera.h  light.h  model.h  shader.h  sphere.h  text_renderer.h
shaders/: model.fs  model.vs  sphere.fs  text.vs
src/: main.cpp  shader_utils.cpp  text_renderer.cpp
